--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce-be",
+  "name": "ecommerce",
   "version": "1.0.0",
   "description": "MERN shopping app",
   "main": "server.js",
@@ -8,13 +8,19 @@
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix ./frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "data:import": "node backend/seeder",
+    "data:destroy": "node backend/seeder -d"
   },
   "author": "Anton Burduzha",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
+    "mongoose": "^5.10.14"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
